# kafka-project

01-file-to-kafka/: pom.xml
01-file-to-kafka/src/main/java/: KafkaProducerTest.java
02-kafka-example/: pom.xml
02-kafka-example/readme/: readme.md
02-kafka-example/src/main/java/: KafkaConsumerTest.java  KafkaProducerTest.java
demo1/: CMakeLists.txt  main.cpp
java/maven/01-kafka-maven-demo/: pom.xml
java/maven/01-kafka-maven-demo/src/main/java/: KafkaConsumerTest.java  KafkaProducerTest.java
java/spring-boot/springboot01-kafka-demo/: pom.xml
java/spring-boot/springboot01-kafka-demo/src/main/java/com/example/springboot01kafkademo/: KafkaConsumer.java  Springboot01KafkaDemoApplication.java
java/spring-boot/springboot01-kafka-demo/src/main/resources/: application.properties
java/spring-boot/springboot01-kafka-demo/src/test/java/com/example/springboot01kafkademo/: Springboot01KafkaDemoApplicationTests.java
rdKafkaDemo-main/: README.md  demoConsumer.cpp  demoMultiProducer.cpp  demoProducer.cpp  processor.cpp  socketServer.cpp  socketServer.h
